istio/gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: danny-gw
  namespace: istio-system

spec:
  selector:
    istio: ingressgateway-internal
  servers:
  - hosts:
    - '*.danny.net'
    port:
      name: http
      number: 80
      protocol: HTTP
  - hosts:
    - apollo-portal.gllue.net
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      privateKey: /etc/istio/ingressgateway-certs/tls.key
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
